--- a/app/src/main/res/layout/list_item_movie.xml
+++ b/app/src/main/res/layout/list_item_movie.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/list_item_poster"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:scaleType="centerInside"/>
 
 
