--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,4 +11,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rc_movie"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        />
+
 </RelativeLayout>
