--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <ListView
-        android:id="@+id/listview_movie"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <!--<ListView-->
+        <!--android:id="@+id/listview_movie"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent" />-->
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rc_movie"
@@ -17,5 +17,13 @@
         android:layout_height="wrap_content"
 
         />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:visibility="gone"/>
 
 </RelativeLayout>
