--- a/app/src/main/res/layout/review_card.xml
+++ b/app/src/main/res/layout/review_card.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
+        android:layout_height="wrap_content"
         android:layout_margin="@dimen/card_margin"
-        android:elevation="3dp"
         app:cardCornerRadius="@dimen/card_album_radius">
 
         <LinearLayout
+            android:padding="5dp"
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -30,5 +28,6 @@
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
+
 
 </LinearLayout>
