--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -95,9 +95,11 @@
 
 
     <LinearLayout
+        android:id="@+id/layout_linear"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom|left"
         app:layout_anchor="@id/tv_synopsis"
         app:layout_anchorGravity="bottom">
 
@@ -106,7 +108,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/load_review"
-            android:layout_marginTop="50dp"
             android:layout_gravity="center_vertical"/>
 
         <TextView
@@ -125,7 +126,9 @@
             style="@style/MainProgressBarStyle" />
     </LinearLayout>
 
-    <include app:layout_anchor="@id/btn_load_review"
-        app:layout_anchorGravity="bottom" layout="@layout/review_main"/>
+    <include
+        app:layout_anchor="@id/tv_synopsis"
+        app:layout_anchorGravity="bottom"
+        layout="@layout/review_main"/>
 
 </android.support.design.widget.CoordinatorLayout>
