--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="card_margin">5dp</dimen>
     <dimen name="card_album_radius">5dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
