--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,6 @@
 <resources>
 
 
-
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
@@ -26,7 +25,6 @@
         <item name="colorAccent">@color/colorAccent</item>
 
     </style>
-
 
 
     <style name="layoutWrapWidthHeight">
@@ -54,5 +52,9 @@
         <item name="android:layout_centerVertical">true</item>
         <item name="android:visibility">gone</item>
     </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
