--- a/app/src/main/res/layout/movie_list.xml
+++ b/app/src/main/res/layout/movie_list.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:minHeight="?android:attr/listPreferredItemHeight"
     android:gravity="center_vertical"
-    android:padding="16dp">
+    android:padding="@dimen/layout_padding">
 
     <ImageView
         android:id="@+id/list_item_poster"
