--- a/app/src/main/res/layout/activity_network_error.xml
+++ b/app/src/main/res/layout/activity_network_error.xml
@@ -10,12 +10,12 @@
         android:id="@+id/retry_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="@dimen/network_view_margin"
+        android:layout_marginEnd="@dimen/network_view_margin"
+        android:layout_marginLeft="@dimen/network_view_margin"
+        android:layout_marginRight="@dimen/network_view_margin"
+        android:layout_marginStart="@dimen/network_view_margin"
+        android:layout_marginTop="@dimen/network_view_margin"
         android:text="@string/btn_retry_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,18 +26,18 @@
         android:id="@+id/network_error_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="@dimen/network_view_margin"
+        android:layout_marginEnd="@dimen/network_view_margin"
+        android:layout_marginLeft="@dimen/network_view_margin"
+        android:layout_marginRight="@dimen/network_view_margin"
+        android:layout_marginStart="@dimen/network_view_margin"
+        android:layout_marginTop="@dimen/network_view_margin"
         android:text="@string/network_error_msg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintHorizontal_bias="@dimen/horizontal_bias"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/retry_btn"
-        app:layout_constraintVertical_bias="0.026" />
+        app:layout_constraintVertical_bias="@dimen/vertical_bias" />
 
 </android.support.constraint.ConstraintLayout>
