--- a/app/src/main/res/layout/review_main.xml
+++ b/app/src/main/res/layout/review_main.xml
@@ -12,8 +12,8 @@
         android:id="@+id/tv_review_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Reviews"
-        android:textSize="20sp"
+        android:text="@string/tv_review_label_text"
+        android:textSize="@dimen/text_size"
         android:visibility="gone"
         />
 
