--- a/app/src/main/res/layout/trailer_card.xml
+++ b/app/src/main/res/layout/trailer_card.xml
@@ -4,8 +4,8 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="@dimen/card_album_radius"
-    android:layout_margin="@dimen/card_margin"
-    android:padding="5dp">
+    android:layout_margin="@dimen/view_margin"
+    android:padding="@dimen/view_padding">
 
     <RelativeLayout
         android:layout_width="match_parent"
