--- a/app/src/main/res/layout/activity_trailer_youtube_palyer.xml
+++ b/app/src/main/res/layout/activity_trailer_youtube_palyer.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".YoutubeTrailerPlayerActivity">
+    tools:context=".activity.YoutubeTrailerPlayerActivity">
 
     <com.google.android.youtube.player.YouTubePlayerView
         android:id="@+id/ytp_player"
